Added a rate limiter

--- a/translation_core.ipynb
+++ b/translation_core.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,43 +20,21 @@
     "Translate all languages\n",
     "\"\"\"\n",
     "\n",
-    "__version__ = '0.1.0'\n",
+    "__version__ = '0.0.2'\n",
     "\n",
-    "import translators as ts\n",
     "import os\n",
     "import pandas as pd\n",
+    "import json\n",
     "from csv import writer\n",
-    "import translators as ts\n",
-    "\n"
+    "import translators as ts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 19 entries, 0 to 18\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column                    Non-Null Count  Dtype \n",
-      "---  ------                    --------------  ----- \n",
-      " 0   Unnamed: 0                19 non-null     int64 \n",
-      " 1   userid                    19 non-null     object\n",
-      " 2   user_reported_location_x  19 non-null     object\n",
-      " 3   stem                      19 non-null     object\n",
-      " 4   account_language_x        19 non-null     object\n",
-      " 5   user_country              19 non-null     object\n",
-      "dtypes: int64(1), object(5)\n",
-      "memory usage: 1.0+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "#The account_language_x_campaign.csv was generated in file \"translation.ipynb\"\n",
     "account_language_x_campaign = pd.read_csv('account_language_x_campaign.csv')\n",
     "account_language_x_campaign.info()"
@@ -64,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -123,12 +101,18 @@
       "('stUEBBP8al4SoPA9mVIAJl29wWh8UeTvKoSHus0blMc=', 'Murfreesboro, USA', 'Murfreesboro, USA', 'United States', 'zh-cn', 'china')\n",
       "('PK02iSoUjg3M8jgEE3831yG+R+993gGrrrTV7eAAO0=', 'Липецк, Россия', 'Lipetsk, Russia', 'Russia', 'zh-cn', 'china')\n",
       "('4vnsAYirl4ZV7eTaDGyXfDVThEfHeRiU7eEpU0dqQxo=', 'Воронеж, Россия', 'Voronezh, Russia', 'Russia', 'zh-cn', 'china')\n",
-      "('OgE4npKQHaJ0cWjTUag4UsF1rywpOuuRiRyZQe3L6lE=', 'Palm Bay', 'Palm Bay', 'United States', 'zh-cn', 'china')\n"
+      "('OgE4npKQHaJ0cWjTUag4UsF1rywpOuuRiRyZQe3L6lE=', 'Palm Bay', 'Palm Bay', 'United States', 'zh-cn', 'china')\n",
+      "('A9YY5CNYcT9RflMrUuIvxmqx+xMSW4LOXn7m0h9Ans=', 'hongkong', 'Hong Kong', 'China', 'zh-cn', 'china')\n",
+      "('Pkqg0hdh+Schf3eUFDtmCbhC6Y6iXGwZYTaPawWxqFs=', '新北市, 台灣', 'New North City, Taiwan', 'Taiwan', 'zh-tw', 'china')\n",
+      "('LcsWw5XWwM3lCPLYD59DP8Vd3akzHDSiOp0p0bsHQ=', '千叶', 'Chiba', 'Japan', 'zh-CN', 'china')\n",
+      "('VgLxJf1onvfGJzhya0pjCWEd9d51eOvkFfW9vMDOBd4=', 'Oshawa, Ontario', 'Oshawa, Ontario', 'Canada', 'zh-cn', 'china')\n",
+      "('eQ1Hg0I1IlgHisuMXVi1dvs+spC81NcKbVq8vZkDf5Q=', '澳门', 'Macao', 'China', 'zh-tw', 'china')\n",
+      "('3oo8swPpaLLi+4IOTtsWUnjFOOpb3kOJ5YmBDxdoYc=', 'Oakland City', 'Oakland City', 'United States', 'zh-cn', 'china')\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "#Translates User_Reported_Location for mixed language data. Writes data to a CSV file\n",
     "\n",
     "#Defines the output file name\n",
     "output_filename = 'account_language_x_campaign_translate.csv'\n",
@@ -145,24 +129,24 @@
     "#Creates an empty list\n",
     "language_translate = []\n",
     "\n",
+    "#Rate Limiter to not get booted from the API (period = seconds)\n",
+    "rate_limiter = RateLimiter(max_calls=5, period=60)\n",
+    "\n",
     "#Iterates through each row to translate to english. \n",
     "iter_len=len(account_language_x_campaign)\n",
     "for q in range(iter_len):\n",
+    "    with rate_limiter:\n",
     "\n",
-    "    try:\n",
-    "        translate = account_language_x_campaign.user_reported_location_x[q]\n",
-    "        translate_detect = (account_language_x_campaign.userid[q], account_language_x_campaign.user_reported_location_x[q], ts.google(translate), account_language_x_campaign.user_country[q], account_language_x_campaign.account_language_x[q], account_language_x_campaign.stem[q])\n",
-    "        print(translate_detect)\n",
-    "        append_list_as_row(output_filename, translate_detect)\n",
-    "    except:\n",
-    "        #print('TRANSLATION ERROR')\n",
-    "        translate_detect = (account_language_x_campaign.userid[q], account_language_x_campaign.user_reported_location_x[q], 'TRANSLATION ERROR', account_language_x_campaign.user_country[q], account_language_x_campaign.account_language_x[q], account_language_x_campaign.stem[q])\n",
-    "        append_list_as_row(output_filename, translate_detect)\n",
-    "        continue\n",
-    "\n",
-    "# A quick hack to get column labels. \n",
-    "account_language_x_campaign_translate = pd.read_csv('account_language_x_campaign_translate.csv', header=None, names =['account_language_x_campaign.userid', 'account_language_x_campaign.user_reported_location_x', 'translated_location', 'account_language_x_campaign.user_country', 'account_language_x_campaign.account_language_x', 'account_language_x_campaign.stem'])\n",
-    "account_language_x_campaign_translate.to_csv('account_language_x_campaign_translate.csv')\n"
+    "        try:\n",
+    "            translate = account_language_x_campaign.user_reported_location_x[q]\n",
+    "            translate_detect = (account_language_x_campaign.userid[q], account_language_x_campaign.user_reported_location_x[q], ts.google(translate), account_language_x_campaign.user_country[q], account_language_x_campaign.account_language_x[q], account_language_x_campaign.stem[q])\n",
+    "            print(translate_detect)\n",
+    "            append_list_as_row(output_filename, translate_detect)\n",
+    "        except:\n",
+    "            #print('TRANSLATION ERROR')\n",
+    "            translate_detect = (account_language_x_campaign.userid[q], account_language_x_campaign.user_reported_location_x[q], 'TRANSLATION ERROR', account_language_x_campaign.user_country[q], account_language_x_campaign.account_language_x[q], account_language_x_campaign.stem[q])\n",
+    "            append_list_as_row(output_filename, translate_detect)\n",
+    "            continue"
    ]
   }
  ],
